--- a/css/app.css
+++ b/css/app.css
@@ -1,22 +1,72 @@
-body{background:black;}
-
-/*.wow img{width:100%;height:auto;}*/
-
-/* BOOTSTRAP NO GUTTERS */
-.row.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
+body{
+	font-family:Georgia;
 }
-.row.no-gutters [class^="col-"],
-.row.no-gutters [class*=" col-"]{
-  padding-right: 0;
-  padding-left: 0;
+.filter h3{
+	text-align:center;
+	font-size:0.8em;
+	color:#ccc;
+}
+.filter ul{
+	list-style:none;
+	display:block;
+	width:100%;
+	text-align:center;
+	margin:0;
+	padding:0;
+}
+.filter ul li{
+	display:inline;
+}
+.filter ul li a{
+	display:inline-block;
+	padding:10px;
+	color:#000;
+}
+h1,h2,h3,li,footer{
+	text-transform: uppercase;
+}
+header{
+	text-align:center;
+}
+nav{
+	border-bottom:1px solid #000;
+	background:#fdfdfd;
+}
+footer{
+	border-top:1px solid #000;
+	background:#fff;
+}
+.cancer-sutra > div{
+	max-width:300px;
+}
+.cancer-sutra > div > img{
+	width:100%;
+	height:auto;
+	-webkit-transition: all 0.5s ease; /* Safari and Chrome */
+  	-moz-transition: all 0.5s ease; /* Firefox */
+  	-o-transition: all 0.5s ease; /* IE 9 */
+  	-ms-transition: all 0.5s ease; /* Opera */
+  	transition: all 0.5s ease;
+  	cursor:pointer;
 }
 
-
-.wow { 
-    transition:all .2s linear; 
-    -o-transition:all .2s linear; 
-    -moz-transition:all .2s linear; 
-    -webkit-transition:all .2s linear;
+.cancer-sutra > div:hover img {
+    -webkit-transform:scale(1.1); /* Safari and Chrome */
+    -moz-transform:scale(1.1); /* Firefox */
+    -ms-transform:scale(1.1); /* IE 9 */
+    -o-transform:scale(1.1); /* Opera */
+     transform:scale(1.1);
 }
+
+/*.position1{background-image:url(../positions/gif/1.gif);}
+.position2{background-image:url(../positions/gif/2.gif);}
+.position3{background-image:url(../positions/gif/3.gif);}
+.position4{background-image:url(../positions/gif/4.gif);}
+.position5{background-image:url(../positions/gif/5.gif);}
+.position6{background-image:url(../positions/gif/6.gif);}
+.position7{background-image:url(../positions/gif/7.gif);}
+.position8{background-image:url(../positions/gif/8.gif);}
+.position9{background-image:url(../positions/gif/9.gif);}
+.position10{background-image:url(../positions/gif/10.gif);}
+.position11{background-image:url(../positions/gif/11.gif);}
+.position12{background-image:url(../positions/gif/12.gif);}*/
