--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@ html{
 }
 body{
 	font-family:Georgia;
+	color:#000;
 }
 .filter{
 	padding:20px;
@@ -22,13 +23,16 @@ body{
 	margin:0;
 	padding:0;
 }
-.filter ul li{
+.filter li{
 	display:inline;
 }
-.filter ul li a{
+.filter a{
 	display:inline-block;
 	padding:10px 5px;
 	color:#000;
+}
+.filter a[data-toggle="on"]{
+	background:#ccc;
 }
 h1,h2,h3,h4,h5,.uppercase{
 	text-transform: uppercase;
@@ -74,11 +78,17 @@ footer span{
 
 }
 .cancer-sutra{
-	visibility:hidden;
 	padding-top:2%;
+	overflow:hidden;
+	-webkit-transition: all 0.5s ease; /* Safari and Chrome */
+  	-moz-transition: all 0.5s ease; /* Firefox */
+  	-o-transition: all 0.5s ease; /* IE 9 */
+  	-ms-transition: all 0.5s ease; /* Opera */
+  	transition: all 0.5s ease;
 }
 .cancer-sutra > div{
-	max-width:300px;
+	max-width:320px;
+	height:auto;
 }
 .cancer-sutra > div > img{
 	width:100%;
@@ -90,7 +100,9 @@ footer span{
   	transition: all 0.5s ease;
   	cursor:pointer;
 }
-
+.cancer-sutra .detail{
+	display:none;
+}
 .cancer-sutra > div:hover img {
     -webkit-transform:scale(1.1); /* Safari and Chrome */
     -moz-transform:scale(1.1); /* Firefox */
@@ -101,19 +113,6 @@ footer span{
 .cancer-sutra > div:hover{
 	z-index:100;
 }
-
-/*.position1{background-image:url(../positions/gif/1.gif);}
-.position2{background-image:url(../positions/gif/2.gif);}
-.position3{background-image:url(../positions/gif/3.gif);}
-.position4{background-image:url(../positions/gif/4.gif);}
-.position5{background-image:url(../positions/gif/5.gif);}
-.position6{background-image:url(../positions/gif/6.gif);}
-.position7{background-image:url(../positions/gif/7.gif);}
-.position8{background-image:url(../positions/gif/8.gif);}
-.position9{background-image:url(../positions/gif/9.gif);}
-.position10{background-image:url(../positions/gif/10.gif);}
-.position11{background-image:url(../positions/gif/11.gif);}
-.position12{background-image:url(../positions/gif/12.gif);}*/
 
 .intro header{
 	margin-top:100px;
@@ -128,12 +127,82 @@ footer span{
    padding: 0 !important;
    margin: 0 !important;
 }
+.opacity0{
+	opacity:0;
+}
 
-@media (max-width:480px){
+@media (max-width:768px){
 	.filter ul li,.filter ul li a{
 		display:block;
 	}
 	.filter,footer{
 		text-align:center;
 	}
+	.detail-image{
+		display:none;
+	}
+	[data-position="1"] .detail-text::after{background-image:url(../positions/gif/1.gif);}
+	[data-position="2"] .detail-text::after{background-image:url(../positions/gif/2.gif);}
+	[data-position="3"] .detail-text::after{background-image:url(../positions/gif/3.gif);}
+	[data-position="4"] .detail-text::after{background-image:url(../positions/gif/4.gif);}
+	[data-position="5"] .detail-text::after{background-image:url(../positions/gif/5.gif);}
+	[data-position="6"] .detail-text::after{background-image:url(../positions/gif/6.gif);}
+	[data-position="7"] .detail-text::after{background-image:url(../positions/gif/7.gif);}
+	[data-position="8"] .detail-text::after{background-image:url(../positions/gif/8.gif);}
+	[data-position="9"] .detail-text::after{background-image:url(../positions/gif/9.gif);}
+	[data-position="10"] .detail-text::after{background-image:url(../positions/gif/10.gif);}
+	[data-position="11"] .detail-text::after{background-image:url(../positions/gif/11.gif);}
+	[data-position="12"] .detail-text::after{background-image:url(../positions/gif/12.gif);}
+}
+
+.fancybox-skin{
+	border-radius:0;
+	border:1px solid #000;
+	color:#000;
+}
+.fancybox-close{
+	background-image:none;
+	top:0;
+	right:0;
+}
+.fancybox-close:hover{
+	text-decoration: none;
+}
+.fancybox-close::after{
+	content:'×';
+	font-size:40px;
+	color:#ccc;
+	font-family:Arial,sans-serif;
+}
+.just-the-tip{
+	color:#999;
+}
+.detail h2{
+	border-bottom:1px solid #00aeef;
+	padding-bottom:3%;
+	margin-bottom:3%;
+}
+.detail img{
+	height:100%;
+	width:auto;
+}
+.detail-text{
+	text-align: center;
+	height:100%;
+	position:relative;
+	display:block;
+	z-index:1;
+}
+.detail-text::after{
+	content: "";
+	opacity: 0.2;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	z-index:-1;
+	position: absolute;
+	background-size: auto 100%;
+	background-repeat: no-repeat;
+	background-position: center;
 }
