--- a/css/app.css
+++ b/css/app.css
@@ -177,12 +177,16 @@ footer span{
 .just-the-tip{
 	color:#999;
 }
+.detail{
+	max-width:1100px;
+	margin:auto auto;
+}
 .detail h2{
 	border-bottom:1px solid #00aeef;
 	padding-bottom:3%;
 	margin-bottom:3%;
 }
-.detail img{
+.detail-image img{
 	height:100%;
 	width:auto;
 }
