--- a/css/app.css
+++ b/css/app.css
@@ -49,11 +49,11 @@ header{
   	padding-bottom:1%;
 }
 nav{
-	-webkit-transition: max-height 1s ease; /* Safari and Chrome */
-  	-moz-transition: max-height 1s ease; /* Firefox */
-  	-o-transition: max-height 1s ease; /* IE 9 */
-  	-ms-transition: max-height 1s ease; /* Opera */
-  	transition: max-height 1s ease;
+	/*-webkit-transition: max-height 1s ease;
+  	-moz-transition: max-height 1s ease;
+  	-o-transition: max-height 1s ease;
+  	-ms-transition: max-height 1s ease;
+  	transition: max-height 1s ease;*/
 	background:#fdfdfd;
 	overflow:hidden;
 }
@@ -226,11 +226,11 @@ footer span{
 		height:45px;
 	}
 	nav{
-		max-height:0;
-		/*display:none;*/
+		/*max-height:0;*/
+		display:none;
 	}
 	nav.open{
-		max-height:400px;
+		/*max-height:400px;*/
 	}
 	.filter{
 		padding:0;
