--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,10 @@ header{
   	padding-bottom:1%;
 }
 nav{
+	background:#fff;
+	z-index:100;
+}
+.filters{
 	/*-webkit-transition: max-height 1s ease;
   	-moz-transition: max-height 1s ease;
   	-o-transition: max-height 1s ease;
@@ -57,8 +61,33 @@ nav{
 	background:#fdfdfd;
 	overflow:hidden;
 }
+.device-menu{
+	position:relative;
+	display:none;
+}
 
-.menu-toggle { position: absolute; left: 1%; top: 20px; }
+.device-menu::after{
+	content:'The Cancer Sutra';
+	text-transform: uppercase;
+	top:10px;
+	width:100%;
+	height:100%;
+	text-align: center;
+	position:absolute;
+	font-size:20px;
+	opacity:0;
+	-webkit-transition: all 0.5s ease; /* Safari and Chrome */
+  	-moz-transition: all 0.5s ease; /* Firefox */
+  	-o-transition: all 0.5s ease; /* IE 9 */
+  	-ms-transition: all 0.5s ease; /* Opera */
+  	transition: all 0.5s ease;
+}
+.device-menu.scrolling::after{
+	opacity:1;
+
+}
+
+.menu-toggle { position: absolute; left: 1%; top: 20px; z-index:101; }
 
 .menu-toggle { cursor: pointer; padding: 0px 26px 12px 0px; }
 .menu-toggle span, .menu-toggle span:before, .menu-toggle span:after {
@@ -70,11 +99,6 @@ nav{
   position: absolute;
   display: block;
   content: '';
-}
-
-.device-menu{
-	position:relative;
-	display:none;
 }
 
 .menu-toggle span:before {
@@ -166,19 +190,19 @@ footer span{
     -o-transform:scale(1.1);
      transform:scale(1.1);
 }*/
-.cancer-sutra > div:hover{
+/*.cancer-sutra > div:hover{
 	z-index:100;
-}
+}*/
 
-.intro header{
-	/*margin-top:100px;*/
+/*.intro header{
+	margin-top:100px;
 }
-.intro nav{
+.intro .filters{
 	opacity:0;
 }
 .intro footer{
 	opacity:0;
-}
+}*/
 .nopadding {
    padding: 0 !important;
    margin: 0 !important;
@@ -225,15 +249,20 @@ footer span{
 	}
 }
 @media (max-width:990px){
+	header{
+		border-top:none;
+	}
 	.device-menu{
 		display:block;
 		height:45px;
+		border-bottom:1px solid #000;
 	}
-	nav{
+	.filters{
 		/*max-height:0;*/
 		display:none;
+		padding-top:10px;
 	}
-	nav.open{
+	.filters.open{
 		/*max-height:400px;*/
 	}
 	.filter{
