disabled inertia scrolling iOS

--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,8 @@ html{
 body{
 	font-family:Georgia;
 	color:#000;
+	/*disable inertia scrolling*/
+	-webkit-overflow-scrolling: none;
 }
 .filter{
 	padding:20px;
@@ -278,11 +280,11 @@ footer span{
 	.filters{
 		left:-50%;
 		/*display:none;*/
-		-webkit-transition: all 0.5s ease;
-	  	-moz-transition: all 0.5s ease;
-	  	-o-transition: all 0.5s ease;
-	  	-ms-transition: all 0.5s ease;
-	  	transition: all 0.5s ease;
+		-webkit-transition: left 0.5s ease;
+	  	-moz-transition: left 0.5s ease;
+	  	-o-transition: left 0.5s ease;
+	  	-ms-transition: left 0.5s ease;
+	  	transition: left 0.5s ease;
 	}
 	.filters.open{
 		left:0;
