--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,17 @@
+html,
+body{
+	height:100%;
+	width:100%;
+	overflow:auto;
+}
+
 html{
 	position:relative;
 }
 body{
 	font-family:Georgia;
 	color:#000;
+	-webkit-overflow-scrolling:touch;
 }
 
 body.loading{
