--- a/css/app.css
+++ b/css/app.css
@@ -11,7 +11,7 @@ html{
 body{
 	font-family:Georgia;
 	color:#000;
-	-webkit-overflow-scrolling:touch;
+	/*-webkit-overflow-scrolling:touch;*/
 }
 
 body.loading{
