restore -webkit-overflow-scrolling:touch; for another iPad test

--- a/css/app.css
+++ b/css/app.css
@@ -3,8 +3,8 @@ body{
 	height:100%;
 	width:100%;
 	overflow:auto;
-}
-body{-webkit-overflow-scrolling:touch;}*/
+}*/
+body{-webkit-overflow-scrolling:touch;}
 html{
 	position:relative;
 }
