--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,9 @@
-/*html,
+html,
 body{
 	height:100%;
 	width:100%;
 	overflow:auto;
-}*/
+}
 body{-webkit-overflow-scrolling:touch;}
 html{
 	position:relative;
