iframe background:Transparent test for ipad+fancybox

--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,9 @@ body{-webkit-overflow-scrolling:touch;}
 html{
 	position:relative;
 }
+iframe{
+	background:transparent;
+}
 body{
 	font-family:Georgia;
 	color:#000;
