doesn't look like white flash is an iframe. removing position relative from HTML

--- a/css/app.css
+++ b/css/app.css
@@ -5,12 +5,9 @@ body{
 	overflow:auto;
 }
 body{-webkit-overflow-scrolling:touch;}
-html{
+/*html{
 	position:relative;
-}
-iframe{
-	background:transparent;
-}
+}*/
 body{
 	font-family:Georgia;
 	color:#000;
