--- a/css/app.css
+++ b/css/app.css
@@ -273,6 +273,19 @@ footer span{
 	.cancer-sutra > div{
 		width:50%;
 	}
+	.filters{
+		max-height:0;
+		/*display:none;*/
+		padding-top:10px;
+		-webkit-transition: max-height 0.5s ease;
+	  	-moz-transition: max-height 0.5s ease;
+	  	-o-transition: max-height 0.5s ease;
+	  	-ms-transition: max-height 0.5s ease;
+	  	transition: max-height 0.5s ease;
+	}
+	.filters.open{
+		max-height:401px;
+	}
 
 }
 @media (min-width:480px) and (max-width:1200px){
@@ -354,18 +367,20 @@ footer span{
 	.filter a:active{
 		text-decoration: none;
 	}
-	.filters{
-		max-height:0;
-		/*display:none;*/
-		padding-top:10px;
-		-webkit-transition: max-height 0.5s ease;
-	  	-moz-transition: max-height 0.5s ease;
-	  	-o-transition: max-height 0.5s ease;
-	  	-ms-transition: max-height 0.5s ease;
-	  	transition: max-height 0.5s ease;
-	}
-	.filters.open{
-		max-height:401px;
+	@media (max-height:371px){
+		.filters{
+			max-height:0;
+			/*display:none;*/
+			padding-top:10px;
+			-webkit-transition: max-height 0.5s ease;
+		  	-moz-transition: max-height 0.5s ease;
+		  	-o-transition: max-height 0.5s ease;
+		  	-ms-transition: max-height 0.5s ease;
+		  	transition: max-height 0.5s ease;
+		}
+		.filters.open{
+			max-height:401px;
+		}
 	}
 }
 @media (min-width:990px){
