--- a/css/app.css
+++ b/css/app.css
@@ -201,7 +201,7 @@ footer .acc{
 	font-size:12px;
 }
 .cancer-sutra{
-	padding-top:2%;
+	padding:2% 0;
 	overflow:hidden;
 	-webkit-transition: all 0.5s ease;
   	-moz-transition: all 0.5s ease;
